MinecraftAppConfig/main.tf
resource "aws_security_group_rule" "SSH"{
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = [var.cidr_block]
  security_group_id = var.security_group_id
}

resource "aws_security_group_rule" "MineCraft_TCP"{
  type              = "ingress"
  from_port         = 25565
  to_port           = 25565
  protocol          = "tcp"
  cidr_blocks       = [var.cidr_block]
  security_group_id = var.security_group_id
}

resource "aws_security_group_rule" "MineCraft_UDP"{
  type              = "ingress"
  from_port         = 25565
  to_port           = 25565
  protocol          = "udp"
  cidr_blocks       = [var.cidr_block]
  security_group_id = var.security_group_id
}
